test/log/reduction/vrmax_v_u16.txt
vrmax_v_u16.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrmax_v_u16.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrmax_v_u16.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vrmax_v_u16.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vrmax_v_u16.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vrmax_v_u16.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vrmax_v_u16.c:22:6: warning: no previous prototype for 'vrmax_v_u16_golden' [-Wmissing-prototypes]
   22 | void vrmax_v_u16_golden(uint16_t *a,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~
vrmax_v_u16.c: In function 'vrmax_v_u16_golden':
vrmax_v_u16.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vrmax_v_u16.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vrmax_v_u16.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vrmax_v_u16.c:22:35: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vrmax_v_u16_golden(uint16_t *a,uint16_t *exp_result) {
      |                         ~~~~~~~~~~^
vrmax_v_u16.c:22:47: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vrmax_v_u16_golden(uint16_t *a,uint16_t *exp_result) {
      |                                     ~~~~~~~~~~^~~~~~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmax_v_u16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrmax_v_u16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrmax_v_u16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmax_v_u16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed